# activity-serve

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  SPEC.md  conftest.py  package.json  pyproject.toml
app/: main.py
app/api/: __init__.py  admin.py  auth.py  health.py  user.py
app/background/: worker.py
app/core/: settings.py
app/middleware/: firebase_auth.py
app/middlewares/: auth.py  logging.py  normalize.py
app/models/: __init__.py
app/services/: activity.py  auth.py  bootstrap.py  firebase.py  user.py
tests/: helpers.py  test_admin.py  test_auth.py  test_authorization.py  test_health.py  test_inbox.py  test_outbox.py  test_user.py
