[project]
name = "activity-serve"
version = "0.1.0"
description = "ActivityPub-compatible server built with FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.104.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "structlog>=23.2.0",
    "activity-store[es,redis]",
    "activity-bus",
    "nanoid>=2.0.0",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.6",
    "ruff",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.0",
]

[tool.pytest]
testpaths = ["tests"]
pythonpath = ["."]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.uv.sources]
activity-store = { git = "https://github.com/DeadWisdom/activity-store.git" }
activity-bus = { git = "https://github.com/DeadWisdom/activity-bus.git" }
